--- a/Pipfile
+++ b/Pipfile
@@ -4,9 +4,16 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-python-decouple = "*"
+decouple = "*"
+dotenv = "*"
+django = "==4.0.5"
+gunicorn = "==20.1.0"
+sendgrid = "==6.9.7"
+python-decouple = "==3.6"
+python-dotenv = "==0.20.0"
+whitenoise = "==6.4.0"
 
 [dev-packages]
 
 [requires]
-python_version = "3.10"
+python_version = "3.13"
